--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.red5</groupId>
+                <artifactId>red5-parent</artifactId>
+                <version>1.0.10-M9</version>
+                <type>pom</type>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
     <modelVersion>4.0.0</modelVersion>
     <!--本系统版本-->
     <groupId>org</groupId>
@@ -15,6 +25,8 @@
     </parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <red5.version>1.0.10</red5.version>
+
     </properties>
 
     <dependencies>
@@ -70,11 +82,11 @@
             <scope>provided</scope>
         </dependency>
         <!-- 引入processor-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-configuration-processor</artifactId>-->
-            <!--<optional>true</optional>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
         <!--任务调度xxl-job-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -93,6 +105,13 @@
             <!--<artifactId>druid-spring-boot-starter</artifactId>-->
             <!--<version>1.1.3</version>-->
         <!--</dependency>-->
+        <!--引入red5相关依赖-->
+        <dependency>
+            <groupId>org.red5</groupId>
+            <artifactId>red5-server</artifactId>
+            <version>1.0.10-M9</version>
+            <type>jar</type>
+        </dependency>
 
     </dependencies>
 </project>
