--- a/pom.xml
+++ b/pom.xml
@@ -2,16 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.red5</groupId>
-                <artifactId>red5-parent</artifactId>
-                <version>1.0.10-M9</version>
-                <type>pom</type>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+    <!--<dependencyManagement>-->
+        <!--<dependencies>-->
+            <!--<dependency>-->
+                <!--<groupId>org.red5</groupId>-->
+                <!--<artifactId>red5-parent</artifactId>-->
+                <!--<version>1.0.10-M9</version>-->
+                <!--<type>pom</type>-->
+            <!--</dependency>-->
+        <!--</dependencies>-->
+    <!--</dependencyManagement>-->
     <modelVersion>4.0.0</modelVersion>
     <!--本系统版本-->
     <groupId>org</groupId>
@@ -61,18 +61,22 @@
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-jpa</artifactId>
             <version>4.1.4</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>querydsl-core</artifactId>
+                    <groupId>com.querydsl</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- 引入JSON支持-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.17</version>
-        </dependency>
-        <!--引入apollo客户端-->
-        <dependency>
-            <groupId>com.ctrip.framework.apollo</groupId>
-            <artifactId>apollo-client</artifactId>
-            <version>0.10.0</version>
         </dependency>
         <!-- 引入lombok支持 -->
         <dependency>
@@ -81,24 +85,31 @@
             <version>1.16.20</version>
             <scope>provided</scope>
         </dependency>
-        <!-- 引入processor-->
+        <!--引入apollo-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
+            <groupId>com.ctrip.framework.apollo</groupId>
+            <artifactId>apollo-client</artifactId>
+            <version>1.0.0</version>
         </dependency>
+        <!-- 引入processor-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-configuration-processor</artifactId>-->
+            <!--<optional>true</optional>-->
+        <!--</dependency>-->
         <!--任务调度xxl-job-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-xxljob-starter</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <artifactId>httpclient</artifactId>
-                    <groupId>org.apache.httpcomponents</groupId>
-                </exclusion>
-            </exclusions>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>1.9.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
+        <!--<dependency>-->
+            <!--<groupId>org.eclipse.jetty</groupId>-->
+            <!--<artifactId>jetty-server</artifactId>-->
+            <!--<version>9.4.7.v20170914</version>-->
+        <!--</dependency>-->
+
         <!--配置数据库连接池-->
         <!--<dependency>-->
             <!--<groupId>com.alibaba</groupId>-->
@@ -106,12 +117,19 @@
             <!--<version>1.1.3</version>-->
         <!--</dependency>-->
         <!--引入red5相关依赖-->
-        <dependency>
-            <groupId>org.red5</groupId>
-            <artifactId>red5-server</artifactId>
-            <version>1.0.10-M9</version>
-            <type>jar</type>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.red5</groupId>-->
+            <!--<artifactId>red5-server</artifactId>-->
+            <!--<version>1.0.10-M9</version>-->
+            <!--<type>jar</type>-->
+        <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/org.apache.mina/mina-core -->
+        <!--<dependency>-->
+            <!--<groupId>org.apache.mina</groupId>-->
+            <!--<artifactId>mina-core</artifactId>-->
+            <!--<version>2.0.19</version>-->
+        <!--</dependency>-->
+
 
     </dependencies>
 </project>
