--- a/pom.xml
+++ b/pom.xml
@@ -134,12 +134,12 @@
             <!--<version>1.1.3</version>-->
         <!--</dependency>-->
         <!--引入red5相关依赖-->
-        <!--<dependency>-->
-            <!--<groupId>org.red5</groupId>-->
-            <!--<artifactId>red5-server</artifactId>-->
-            <!--<version>1.0.10-M9</version>-->
-            <!--<type>jar</type>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.red5</groupId>
+            <artifactId>red5-server</artifactId>
+            <version>1.0.10-M9</version>
+            <type>jar</type>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.apache.mina/mina-core -->
         <!--<dependency>-->
             <!--<groupId>org.apache.mina</groupId>-->
@@ -167,6 +167,18 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <extensions>true</extensions>
+            </plugin>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <configuration>
+                            <fork>true</fork>
+                        </configuration>
+                    </plugin>
         </plugins>
     </build>
 </project>
